--- a/package.json
+++ b/package.json
@@ -10,12 +10,9 @@
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1",
+    "tailwindcss": "^2.0.1",
     "twin.macro": "^2.0.7"
-  },
-  "devDependencies": {
-    "autoprefixer": "10.0.2",
-    "postcss": "8.1.7",
-    "tailwindcss": "^2.0.1"
   },
   "license": "MIT"
 }
